Fixed wrong z-index for integration

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
     left: 2em;
     top: 5em;
     width: 18em;
-    z-index: 99;
+    z-index: 2;
 }
 
 body {
